file manager fix for this abortion of a push https://github.com/opencart/opencart/commit/46c418e5e90f0d8a753aa8a5fb693fa888770b59

--- a/upload/admin/view/template/common/filemanager.twig
+++ b/upload/admin/view/template/common/filemanager.twig
@@ -5,12 +5,10 @@
         <h5 class="modal-title">{{ heading_title }}</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
-      <div class="modal-body"></div>
+      <div class="modal-body">{{ list }}</div>
     </div>
   </div>
   <script type="text/javascript"><!--
-  $('#modal-image .modal-body').load('index.php?route=common/filemanager.list&user_token={{ user_token }}');
-
   $('#modal-image').on('click', '#button-parent', function(e) {
       e.preventDefault();
 
