Add 'date_modified' column to 'article_comment' table
- Admin > CMS > Comments: Now ordered by 'date_modified'.
- Blog Comments: Now ordered by 'date_modified'.
- Updated sort menus and filters to use date_modified vs date_added

```
ALTER TABLE `article_comment` ADD `date_modified` DATETIME NULL AFTER `date_added`;
```

--- a/upload/admin/view/template/cms/comment.twig
+++ b/upload/admin/view/template/cms/comment.twig
@@ -121,7 +121,7 @@ $('#form-filter').on('submit', function(e) {
 	var lcText = sel.toLowerCase();
 
 	// Oldest and Lowest = ASC. Latest and Highest = DESC
-	var sort = lcText.includes('{{ text_rating_needle }}') ? 'rating' : 'date_added';
+	var sort = lcText.includes('{{ text_rating_needle }}') ? 'rating' : 'date_modified';
 	var order = (lcText.includes('{{ text_oldest_needle }}') || lcText.includes('{{ text_lowest_needle }}')) ? 'ASC' : 'DESC';
 	var sortOrder = '&sort=' + sort + '&order=' + order;
 
