--- a/upload/admin/view/template/cms/comment_list.twig
+++ b/upload/admin/view/template/cms/comment_list.twig
@@ -38,7 +38,7 @@
 			    {% endif %}
 			</td>
             <td style="border-left:none;"{% if comment.parent_id %} class="text-end align-top bg-info bg-opacity-25"{% else %} class="text-end align-top bg-success bg-opacity-25"{% endif %}>
-			  <small>{{ comment.date_added }}</small>
+			  <small>{{ comment.date_modified }}</small>
 			</td>
           </tr>
           <tr>
