--- a/upload/extension/opencart/admin/view/template/report/sale_shipping_list.twig
+++ b/upload/extension/opencart/admin/view/template/report/sale_shipping_list.twig
@@ -6,7 +6,7 @@
         <th class="text-start">{{ column_date_end }}</th>
         <th class="text-start">{{ column_title }}</td>
         <th class="text-end">{{ column_orders }}</th>
-        <th class="text-end">{{ column_total }}</td>
+        <th class="text-end">{{ column_total }}</th>
       </tr>
     </thead>
     <tbody>
