--- a/upload/extension/opencart/admin/view/template/report/product_purchased_list.twig
+++ b/upload/extension/opencart/admin/view/template/report/product_purchased_list.twig
@@ -4,7 +4,7 @@
       <tr>
         <th class="text-start">{{ column_name }}</th>
         <th class="text-start">{{ column_model }}</th>
-        <th class="text-end">{{ column_quantity }}</td>
+        <th class="text-end">{{ column_quantity }}</th>
         <th class="text-end">{{ column_total }}</th>
       </tr>
     </thead>
