--- a/upload/extension/opencart/admin/view/template/report/sale_coupon_list.twig
+++ b/upload/extension/opencart/admin/view/template/report/sale_coupon_list.twig
@@ -4,7 +4,7 @@
       <tr>
         <th class="text-start">{{ column_name }}</th>
         <th class="text-start">{{ column_code }}</th>
-        <th class="text-end">{{ column_orders }}</td>
+        <th class="text-end">{{ column_orders }}</th>
         <th class="text-end">{{ column_total }}</th>
         <th class="text-end">{{ column_action }}</th>
       </tr>
