--- a/upload/extension/opencart/admin/view/template/report/sale_order_list.twig
+++ b/upload/extension/opencart/admin/view/template/report/sale_order_list.twig
@@ -4,7 +4,7 @@
       <tr>
         <th class="text-start">{{ column_date_start }}</th>
         <th class="text-start">{{ column_date_end }}</th>
-        <th class="text-end">{{ column_orders }}</td>
+        <th class="text-end">{{ column_orders }}</th>
         <th class="text-end">{{ column_products }}</th>
         <th class="text-end">{{ column_tax }}</th>
         <th class="text-end">{{ column_total }}</th>
