--- a/upload/admin/view/template/extension/module.twig
+++ b/upload/admin/view/template/extension/module.twig
@@ -34,6 +34,7 @@
                   {% endif %}</td>
               </tr>
             {% else %}
+
               <tr{% if not extension.installed %} class="table-disabled"{% endif %}>
                 <td><b>{{ extension.name }}</b></td>
                 <td class="text-center">{% if extension.status %}
@@ -57,7 +58,10 @@
                     {% else %}
                       <span class="badge bg-danger">{{ text_disabled }}</span>
                     {% endif %}</td>
-                  <td class="text-end text-nowrap"><a href="{{ module.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="btn btn-outline-primary"><i class="fa-solid fa-pencil"></i></a> <a href="{{ module.delete }}" data-bs-toggle="tooltip" title="{{ button_delete }}" class="btn btn-outline-danger"><i class="fa-regular fa-trash-can"></i></a></td>
+                  <td class="text-end text-nowrap">
+                    <a href="{{ module.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="btn btn-outline-primary"><i class="fa-solid fa-pencil"></i></a>
+                    <a href="{{ module.delete }}" data-bs-toggle="tooltip" title="{{ button_delete }}" class="btn btn-outline-danger"><i class="fa-regular fa-trash-can"></i></a>
+                  </td>
                 </tr>
               {% endfor %}
 
