--- a/upload/admin/view/template/marketing/marketing_form.twig
+++ b/upload/admin/view/template/marketing/marketing_form.twig
@@ -46,11 +46,11 @@
                 </div>
               </div>
               <div class="row mb-3">
-                <label for="input-example" class="col-sm-2 col-form-label">{{ entry_example }}</label>
+                <label for="input-example-1" class="col-sm-2 col-form-label">{{ entry_example }}</label>
                 <div class="col-sm-10">
-                  <input type="text" name="example1" value="" placeholder="{{ entry_example }}" id="input-example1" class="form-control"/>
+                  <input type="text" name="example1" value="" placeholder="{{ entry_example }}" id="input-example-1" class="form-control"/>
                   <br/>
-                  <input type="text" name="example2" value="" placeholder="{{ entry_example }}" id="input-example2" class="form-control"/>
+                  <input type="text" name="example2" value="" placeholder="{{ entry_example }}" id="input-example-2" class="form-control"/>
                   <div class="form-text">{{ help_example }}</div>
                 </div>
               </div>
