--- a/upload/admin/view/template/marketing/affiliate_form.twig
+++ b/upload/admin/view/template/marketing/affiliate_form.twig
@@ -4,7 +4,8 @@
     <div class="container-fluid">
       <div class="float-end">
         <button type="submit" form="form-affiliate" formaction="{{ save }}" data-bs-toggle="tooltip" title="{{ button_save }}" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i></button>
-        <a href="{{ back }}" data-bs-toggle="tooltip" title="{{ button_back }}" class="btn btn-light"><i class="fa-solid fa-reply"></i></a></div>
+        <a href="{{ back }}" data-bs-toggle="tooltip" title="{{ button_back }}" class="btn btn-light"><i class="fa-solid fa-reply"></i></a>
+      </div>
       <h1>{{ heading_title }}</h1>
       <ol class="breadcrumb">
         {% for breadcrumb in breadcrumbs %}
@@ -68,6 +69,7 @@
                     <div class="form-text">{{ help_commission }}</div>
                   </div>
                 </div>
+
 
                 {% for custom_field in custom_fields %}
                   {% if custom_field.location == 'affiliate' %}
@@ -186,6 +188,13 @@
 
                   {% endif %}
                 {% endfor %}
+
+                <div class="row mb-3">
+                  <label class="col-sm-2 col-form-label">{{ entry_status }}</label>
+                  <div class="col-sm-10">
+                    <x-switch name="status" value="1" checked="{{ status }}" input-id="input-status" input-class="form-switch form-switch-lg"></x-switch>
+                  </div>
+                </div>
               </fieldset>
               <fieldset>
                 <legend>{{ text_payment }}</legend>
@@ -211,15 +220,6 @@
                   </div>
                 </div>
                 <div id="payment-method"></div>
-              </fieldset>
-              <fieldset>
-                <legend>{{ text_other }}</legend>
-                <div class="row mb-3">
-                  <label class="col-sm-2 col-form-label">{{ entry_status }}</label>
-                  <div class="col-sm-10">
-                    <x-switch name="status" value="1" checked="{{ status }}" input-id="input-status" input-class="form-switch form-switch-lg"></x-switch>
-                  </div>
-                </div>
               </fieldset>
             </div>
             <div id="tab-history" class="tab-pane">
