--- a/upload/admin/view/template/marketplace/event_list.twig
+++ b/upload/admin/view/template/marketplace/event_list.twig
@@ -5,6 +5,7 @@
         <tr>
           <th class="text-center" style="width: 1px;"><input type="checkbox" onclick="$('input[name*=\'selected\']').prop('checked', $(this).prop('checked'));" class="form-check-input"/></th>
           <th>{{ column_code }}</th>
+          <th class="text-center">{{ column_status }}</th>
           <th class="text-end d-none d-lg-table-cell">{{ column_sort_order }}</th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
@@ -15,6 +16,11 @@
             <tr{% if not event.status %} class="table-disabled"{% endif %}>
               <td class="text-center"><input type="checkbox" name="selected[]" value="{{ event.event_id }}" class="form-check-input"/></td>
               <td>{{ event.code }}</td>
+              <td class="text-center">{% if event.status %}
+                  <span class="badge bg-success">{{ text_enabled }}</span>
+                {% else %}
+                  <span class="badge bg-danger">{{ text_disabled }}</span>
+                {% endif %}</td>
               <td class="text-end d-none d-lg-table-cell">{{ event.sort_order }}</td>
               <td class="text-end text-nowrap">
                 <button type="button" data-bs-toggle="modal" data-bs-target="#modal-event-{{ event.event_id }}" class="btn btn-info"><i class="fa-solid fa-info-circle"></i></button>
