--- a/upload/admin/view/template/marketplace/startup_list.twig
+++ b/upload/admin/view/template/marketplace/startup_list.twig
@@ -6,6 +6,7 @@
           <th class="text-center" style="width: 1px;"><input type="checkbox" onclick="$('input[name*=\'selected\']').prop('checked', $(this).prop('checked'));" class="form-check-input"/></th>
           <th>{{ column_code }}</th>
           <th>{{ column_action }}</th>
+          <th class="text-center">{{ column_status }}</th>
           <th class="text-end">{{ column_sort_order }}</th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
@@ -17,6 +18,11 @@
               <td class="text-center"><input type="checkbox" name="selected[]" value="{{ startup.startup_id }}" class="form-check-input"/></td>
               <td>{{ startup.code }}</td>
               <td>{{ startup.action }}</td>
+              <td class="text-center">{% if startup.status %}
+                  <span class="badge bg-success">{{ text_enabled }}</span>
+                {% else %}
+                  <span class="badge bg-danger">{{ text_disabled }}</span>
+                {% endif %}</td>
               <td class="text-end">{{ startup.sort_order }}</td>
               <td class="text-end text-nowrap">{% if startup.description %}
                 <button type="button" data-bs-toggle="modal" data-bs-target="#modal-startup-{{ startup.startup_id }}" class="btn btn-info"><i class="fa-solid fa-info-circle"></i></button>
@@ -32,7 +38,7 @@
         {% endfor %}
         {% else %}
           <tr>
-            <td class="text-center" colspan="5">{{ text_no_results }}</td>
+            <td class="text-center" colspan="6">{{ text_no_results }}</td>
           </tr>
         {% endif %}
       </tbody>
