--- a/upload/admin/view/template/marketplace/cron_list.twig
+++ b/upload/admin/view/template/marketplace/cron_list.twig
@@ -26,17 +26,11 @@
                   <span class="badge bg-danger">{{ text_disabled }}</span>
                 {% endif %}</td>
               <td class="d-none d-lg-table-cell">{{ cron.date_modified }}</td>
-              <td class="text-end text-nowrap">
+              <td class="text-end text-nowrap"><button type="button" value="{{ cron.run }}" data-bs-toggle="tooltip" title="{{ button_run }}" class="btn btn-warning"><i class="fa-solid fa-play"></i></button>
                 {% if cron.description %}
                   <button type="button" data-bs-toggle="modal" data-bs-target="#modal-cron-{{ cron.cron_id }}" class="btn btn-info"><i class="fa-solid fa-info-circle"></i></button>
                 {% else %}
                   <button type="button" class="btn btn-info" disabled><i class="fa-solid fa-info-circle"></i></button>
-                {% endif %}
-                <button type="button" value="{{ cron.run }}" data-bs-toggle="tooltip" title="{{ button_run }}" class="btn btn-warning"><i class="fa-solid fa-play"></i></button>
-                {% if not cron.status %}
-                  <button type="button" value="{{ cron.enable }}" data-bs-toggle="tooltip" title="{{ button_enable }}" class="btn btn-success"><i class="fa-solid fa-plus-circle"></i></button>
-                {% else %}
-                  <button type="button" value="{{ cron.disable }}" data-bs-toggle="tooltip" title="{{ button_disable }}" class="btn btn-danger"><i class="fa-solid fa-minus-circle"></i></button>
                 {% endif %}</td>
             </tr>
           {% endfor %}
