--- a/upload/admin/view/template/marketplace/event_list.twig
+++ b/upload/admin/view/template/marketplace/event_list.twig
@@ -22,13 +22,7 @@
                   <span class="badge bg-danger">{{ text_disabled }}</span>
                 {% endif %}</td>
               <td class="text-end d-none d-lg-table-cell">{{ event.sort_order }}</td>
-              <td class="text-end text-nowrap">
-                <button type="button" data-bs-toggle="modal" data-bs-target="#modal-event-{{ event.event_id }}" class="btn btn-info"><i class="fa-solid fa-info-circle"></i></button>
-              {% if not event.status %}
-                <button type="button" value="{{ event.enable }}" data-bs-toggle="tooltip" title="{{ button_enable }}" class="btn btn-success"><i class="fa-solid fa-plus-circle"></i></button>
-              {% else %}
-                <button type="button" value="{{ event.disable }}" data-bs-toggle="tooltip" title="{{ button_disable }}" class="btn btn-danger"><i class="fa-solid fa-minus-circle"></i></button>
-              {% endif %}</td>
+              <td class="text-end text-nowrap"><button type="button" data-bs-toggle="modal" data-bs-target="#modal-event-{{ event.event_id }}" class="btn btn-info"><i class="fa-solid fa-info-circle"></i></button></td>
             </tr>
           {% endfor %}
         {% else %}
