more status change3s

--- a/upload/admin/view/template/common/login.twig
+++ b/upload/admin/view/template/common/login.twig
@@ -9,12 +9,14 @@
           <div class="card-header"><i class="fa-solid fa-lock"></i> {{ text_login }}</div>
           <div class="card-body">
             <form id="form-login" action="{{ login }}" method="post" data-oc-toggle="ajax">
-              {% if error_warning %}
-                <div class="alert alert-danger alert-dismissible"><i class="fa-solid fa-circle-exclamation"></i> {{ error_warning }} <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>
-              {% endif %}
-              {% if success %}
-                <div class="alert alert-success alert-dismissible"><i class="fa-solid fa-check-circle"></i> {{ success }} <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>
-              {% endif %}
+              <div id="alert">
+                {% if error_warning %}
+                  <div class="alert alert-danger alert-dismissible"><i class="fa-solid fa-circle-exclamation"></i> {{ error_warning }} <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>
+                {% endif %}
+                {% if success %}
+                  <div class="alert alert-success alert-dismissible"><i class="fa-solid fa-check-circle"></i> {{ success }} <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>
+                {% endif %}
+              </div>
               <div class="mb-3">
                 <label for="input-username" class="form-label">{{ entry_username }}</label>
                 <div class="input-group">
@@ -29,7 +31,7 @@
                   <input type="password" name="password" value="" placeholder="{{ entry_password }}" id="input-password" class="form-control"/>
                 </div>
                 {% if forgotten %}
-                <div class="mb-3"><a href="{{ forgotten }}">{{ text_forgotten }}</a></div>
+                  <div class="mb-3"><a href="{{ forgotten }}">{{ text_forgotten }}</a></div>
                 {% endif %}
               </div>
               <div class="text-end">
