--- a/upload/admin/view/template/common/header.twig
+++ b/upload/admin/view/template/common/header.twig
@@ -28,7 +28,9 @@
   {% endfor %}
 </head>
 <body>
-<div id="alert"></div>
+{% if logged %}
+  <div id="alert"></div>
+{% endif %}
 <div id="container">
   <header id="header" class="navbar navbar-expand navbar-light bg-light">
     <div class="container-fluid">
@@ -54,12 +56,16 @@
             <a href="#" data-bs-toggle="dropdown" class="nav-link dropdown-toggle"><img src="{{ image }}" alt="{{ firstname }} {{ lastname }}" title="{{ firstname }} {{ lastname }}" class="rounded-circle"/><span class="d-none d-md-inline d-lg-inline">&nbsp;&nbsp;&nbsp;{{ firstname }} {{ lastname }} <i class="fa-solid fa-caret-down fa-fw"></i></span></a>
             <ul class="dropdown-menu dropdown-menu-end">
               <li><a href="{{ profile }}" class="dropdown-item"><i class="fa-solid fa-user-circle fa-fw"></i> {{ text_profile }}</a></li>
-              <li><hr class="dropdown-divider"></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
               <li><h6 class="dropdown-header">{{ text_store }}</h6></li>
               {% for store in stores %}
                 <a href="{{ store.href }}" target="_blank" class="dropdown-item">{{ store.name }}</a>
               {% endfor %}
-              <li><hr class="dropdown-divider"></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
               <li><h6 class="dropdown-header">{{ text_help }}</h6></li>
               <li><a href="https://www.opencart.com" target="_blank" class="dropdown-item"><i class="fa-brands fa-opencart fa-fw"></i> {{ text_homepage }}</a></li>
               <li><a href="https://docs.opencart.com" target="_blank" class="dropdown-item"><i class="fa-solid fa-file fa-fw"></i> {{ text_documentation }}</a></li>
