--- a/upload/admin/view/template/design/translation_form.twig
+++ b/upload/admin/view/template/design/translation_form.twig
@@ -66,6 +66,12 @@
               <textarea name="value" rows="5" placeholder="{{ entry_value }}" id="input-value" class="form-control">{{ value }}</textarea>
             </div>
           </div>
+          <div class="row mb-3">
+            <label class="col-sm-2 col-form-label">{{ entry_status }}</label>
+            <div class="col-sm-10">
+              <x-switch name="status" value="1" checked="{{ status }}" input-id="input-status" input-class="form-switch form-switch-lg"></x-switch>
+            </div>
+          </div>
           <input type="hidden" name="translation_id" value="{{ translation_id }}" id="input-translation-id"/>
         </form>
       </div>
