--- a/upload/admin/view/template/marketplace/ssr_list.twig
+++ b/upload/admin/view/template/marketplace/ssr_list.twig
@@ -20,19 +20,13 @@
               <td>{{ ssr.action }}</td>
               <td class="text-end d-none d-lg-table-cell">{{ ssr.sort_order }}</td>
               <td class="d-none d-lg-table-cell">{{ ssr.date_modified }}</td>
-              <td class="text-end text-nowrap">{% if ssr.description %}
+              <td class="text-end text-nowrap"><button type="button" value="{{ ssr.run }}" data-bs-toggle="tooltip" title="{{ button_generate }}" class="btn btn-warning"><i class="fa-solid fa-sync"></i></button>
+                <button type="button" value="{{ ssr.clear }}" data-bs-toggle="tooltip" title="{{ button_clear }}" class="btn btn-danger"><i class="fa-solid fa-eraser"></i></button>
+                {% if ssr.description %}
                   <button type="button" data-bs-toggle="modal" data-bs-target="#modal-ssr-{{ ssr.ssr_id }}" class="btn btn-info"><i class="fa-solid fa-info-circle"></i></button>
                 {% else %}
                   <button type="button" class="btn btn-info" disabled><i class="fa-solid fa-info-circle"></i></button>
-                {% endif %}
-                <button type="button" value="{{ ssr.run }}" data-bs-toggle="tooltip" title="{{ button_generate }}" class="btn btn-warning"><i class="fa-solid fa-sync"></i></button>
-                <button type="button" value="{{ ssr.clear }}" data-bs-toggle="tooltip" title="{{ button_clear }}" class="btn btn-danger"><i class="fa-solid fa-eraser"></i></button>
-                {% if not ssr.status %}
-                  <button type="button" value="{{ ssr.enable }}" data-bs-toggle="tooltip" title="{{ button_enable }}" class="btn btn-success"><i class="fa-solid fa-plus-circle"></i></button>
-                {% else %}
-                  <button type="button" value="{{ ssr.disable }}" data-bs-toggle="tooltip" title="{{ button_disable }}" class="btn btn-danger"><i class="fa-solid fa-minus-circle"></i></button>
-                {% endif %}
-              </td>
+                {% endif %}</td>
             </tr>
           {% endfor %}
         {% else %}
