--- a/upload/admin/view/template/marketplace/ssr.twig
+++ b/upload/admin/view/template/marketplace/ssr.twig
@@ -26,19 +26,6 @@
       <div class="card-header"><i class="fa-solid fa-list"></i> {{ text_list }}</div>
       <div class="card-body">
         <fieldset>
-          <legend>{{ text_progress }}</legend>
-          <div class="row mb-3">
-            <label class="col-sm-2 col-form-label">{{ entry_progress }}</label>
-            <div class="col-sm-10 mt-2">
-              <div class="progress mb-2">
-                <div id="progress-bar" class="progress-bar" style="width: 0%;"></div>
-              </div>
-              <div id="progress-text" class="form-text mb-3"></div>
-              <button type="button" id="button-generate" data-bs-toggle="tooltip" title="{{ button_generate }}" class="btn btn-primary"><i class="fa-solid fa-play"></i> {{ button_generate }}</button>
-            </div>
-          </div>
-        </fieldset>
-        <fieldset>
           <legend>{{ text_render }}</legend>
           <div id="list">{{ list }}</div>
         </fieldset>
@@ -53,65 +40,7 @@ $('#list').on('click', 'thead a, .pagination a', function(e) {
     $('#list').load(this.href);
 });
 
-$('#list').on('click', '.btn-warning', function(e) {
-    e.preventDefault();
-
-    var element = this;
-
-    $(element).button('loading');
-
-    var next = $(element).attr('value');
-
-    $('#progress-bar').removeClass('bg-danger bg-success').css('width', '0%');
-    $('#progress-text').html('');
-
-    var ssr = function() {
-        return $.ajax({
-            url: next,
-            dataType: 'json',
-            success: function(json) {
-                console.log(json);
-
-                $('.alert-dismissible').remove();
-
-                if (json['error']) {
-                    $('#progress-bar').addClass('bg-danger');
-                    $('#progress-text').html(json['error']);
-
-                    $(element).button('reset');
-                }
-
-                if (json['text']) {
-                    $('#progress-text').html(json['text']);
-                }
-
-                if (json['success']) {
-                    $('#progress-bar').addClass('bg-success').css('width', '100%');
-                    $('#progress-text').html(json['success']);
-
-                    $(element).button('reset');
-
-                    $('#list').load('index.php?route=marketplace/ssr.list&user_token={{ user_token }}');
-                }
-
-                if (json['next']) {
-                    next = json['next'];
-
-                    chain.attach(ssr);
-                }
-            },
-            error: function(xhr, ajaxOptions, thrownError) {
-                console.log(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-
-                $(element).button('reset');
-            }
-        });
-    };
-
-    chain.attach(ssr);
-});
-
-$('#list').on('click', '.btn-success, .btn-danger', function(e) {
+$('#list').on('click', '.btn-success, .btn-warning, .btn-danger', function(e) {
     var element = this;
 
     $.ajax({
