--- a/upload/admin/view/template/marketplace/ssr_list.twig
+++ b/upload/admin/view/template/marketplace/ssr_list.twig
@@ -6,6 +6,7 @@
           <th class="text-center" style="width: 1px;"><input type="checkbox" onclick="$('input[name*=\'selected\']').prop('checked', $(this).prop('checked'));" class="form-check-input"/></th>
           <th>{{ column_code }}</th>
           <th>{{ column_action }}</th>
+          <th class="text-center">{{ column_status }}</th>
           <th class="d-none d-lg-table-cell">{{ column_date_modified }}</th>
           <th class="text-end" style="width: 1px;">{{ column_action }}</th>
         </tr>
@@ -17,6 +18,11 @@
               <td class="text-center"><input type="checkbox" name="selected[]" value="{{ ssr.ssr_id }}" class="form-check-input"/></td>
               <td>{{ ssr.code }}</td>
               <td>{{ ssr.action }}</td>
+              <td class="text-center">{% if ssr.status %}
+                  <span class="badge bg-success">{{ text_enabled }}</span>
+                {% else %}
+                  <span class="badge bg-danger">{{ text_disabled }}</span>
+                {% endif %}</td>
               <td class="d-none d-lg-table-cell">{{ ssr.date_modified }}</td>
               <td class="text-end text-nowrap"><button type="button" value="{{ ssr.run }}" data-bs-toggle="tooltip" title="{{ button_run }}" class="btn btn-warning"><i class="fa-solid fa-play"></i></button>
                 <button type="button" value="{{ ssr.clear }}" data-bs-toggle="tooltip" title="{{ button_clear }}" class="btn btn-danger"><i class="fa-solid fa-eraser"></i></button>
