--- a/upload/admin/view/template/marketplace/ssr_list.twig
+++ b/upload/admin/view/template/marketplace/ssr_list.twig
@@ -24,8 +24,8 @@
                   <span class="badge bg-danger">{{ text_disabled }}</span>
                 {% endif %}</td>
               <td class="d-none d-lg-table-cell">{{ ssr.date_modified }}</td>
-              <td class="text-end text-nowrap"><button type="button" value="{{ ssr.run }}" data-bs-toggle="tooltip" title="{{ button_run }}" class="btn btn-warning"><i class="fa-solid fa-play"></i></button>
-                <button type="button" value="{{ ssr.clear }}" data-bs-toggle="tooltip" title="{{ button_clear }}" class="btn btn-danger"><i class="fa-solid fa-eraser"></i></button>
+              <td class="text-end text-nowrap"><button type="button" value="{{ ssr.run }}" data-bs-toggle="tooltip" title="{{ button_run }}" class="btn btn-warning{% if not ssr.status %} disabled{% endif %}"><i class="fa-solid fa-play"></i></button>
+                <button type="button" value="{{ ssr.clear }}" data-bs-toggle="tooltip" title="{{ button_clear }}" class="btn btn-danger{% if not ssr.status %} disabled{% endif %}"><i class="fa-solid fa-eraser"></i></button>
                 {% if ssr.description %}
                   <button type="button" data-bs-toggle="modal" data-bs-target="#modal-ssr-{{ ssr.ssr_id }}" class="btn btn-info"><i class="fa-solid fa-info-circle"></i></button>
                 {% else %}
